--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: cadetblue;
+    background-color: #062A73 ;
 }
 .container{
     position: relative;
@@ -33,6 +33,31 @@
     transition: .6s ease-out;
 
 
+}
+
+.tit{
+    margin-top: -325px;
+    margin-left: 17px;
+    justify-content: center;
+    position:absolute;
+
+}
+.tit img{
+    width: 129px;
+    position: fixed;
+    margin-top: 152px;
+    margin-left: 346px;
+    transition: .6s ease;
+}
+.titu{
+    position: fixed;
+    width: 444px;
+    height: 105px;
+    padding: 190px 32px;
+    transition: .6s ease-out;
+    font-size: 60px;
+    color: #fff;
+    margin-left: -69px;
 }
 .stat{
     position: relative;
@@ -53,6 +78,7 @@
 
 
 }
+
 .ama .fecha, .ama .dat{
     position: relative;
     font-size: 25px;
@@ -80,6 +106,7 @@
     position: relative;
     margin-left: -4px;
     margin-top: -37px;
+    
 
 }
 .ata .fecha2, .ata .dat{
@@ -275,7 +302,26 @@
     scale: 0;
 }
 
-
+.t2{
+    position: fixed;
+    width: 444px;
+    height: 105px;
+    padding: 68px 32px;
+    transition: .6s ease-out;
+    font-size: 30px;
+    color: #fff;
+    margin-top: -508px;
+    margin-left: 577px;
+    scale: 0;
+    opacity: 0;
+}
+.t2 img{
+    width: 129px;
+    position: fixed;
+    margin-top: -105px;
+    margin-left: 382px;
+    
+}
 .fadeIn{
     animation: 0.5s fadeIn forwards;
     animation-delay: 0.5s;
