--- a/css/styles.css
+++ b/css/styles.css
@@ -348,4 +348,356 @@
 }
 
 
+@media (min-width: 601px) and (max-width: 992px) {
+    .font1{
+        font-family: 'Ubuntu', sans-serif;
+    }
+    .font2{
+        font-family: 'Kanit' sans-serif;
+    }
+    .font3{
+        font-family: 'Noto Sans', sans-serif;
+    }
+    *{
+     margin: 0;
+     padding: 0;
+     border: 0;
+     outline: none;
+     box-sizing: border-box;
+    }
+    .body{
+        height: 100vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: #062A73 ;
+    }
+    .container{
+        position: relative;
+        width: 450px;
+        height: 105px;
+        background: #fff;
+        padding: 28px 32px;
+        overflow: hidden;
+        border-radius: 20px;
+        font-family: 'Ubuntu', sans-serif;
+        transition: .6s ease-out;
+    
+    
+    }
+    
+    .tit{
+        margin-top: -325px;
+        margin-left: 17px;
+        justify-content: center;
+        position:absolute;
+    
+    }
+    .tit img{
+        width: 230px;
+        position: fixed;
+        margin-top: -4px;
+        margin-left: 125px;
+        transition: .6s ease;
+    }
+    
+    .titu{
+        position: fixed;
+        width: 575px;
+        height: 229px;
+        padding: 22px 20px;
+        transition: .6s ease-out;
+        font-size: 82px;
+        color: #fff;
+        margin-left: -419px;
+        margin-top: 77px;
+    }
+    .stat{
+        position: relative;
+        width: 800px;
+        height: 450px;
+        background: #fff;
+        padding: 28px 32px;
+        overflow: hidden;
+        border-radius: 20px;
+        font-family: 'Ubuntu', sans-serif;
+        transition: .6s ease-in;
+        margin-left: 1%;
+        margin-top: 10%;
+        scale: 0;
+        opacity: 0;
+        display: none;
+        justify-content: space-between;
+    
+    
+    }
+    
+    .ama .fecha, .ama .dat{
+        position: relative;
+        font-size: 25px;
+        font-weight: 800;
+        color: #023535;
+        margin-top: -5px;
+        margin-left: 3px;
+        font-family: 'Kanit' sans-serif;
+    }
+    .ama img{
+        width: 120px;
+        margin-top: 52px;
+    }
+    .ata img{
+        width: 120px;
+        margin-top: 52px;
+    }
+    .ata{
+        position: relative;
+        margin-left: 137px;
+        margin-top: -261px;
+    
+    }
+    .ama{
+        position: relative;
+        margin-left: -4px;
+        margin-top: -37px;
+        
+    
+    }
+    .map{
+        width: 500px;
+        margin-top: -276px;
+        margin-left: 352px;
+        position: absolute;
+        transition: .6 ease-in;
+    }
+    .map .minfo{
+        white-space: nowrap; 
+        width: 500px; 
+        padding: 6px;
+        margin-left: 6vh;
+    
+    }
+    .ata .fecha2, .ata .dat{
+        position: relative;
+        font-size: 25px;
+        font-weight: 800;
+        color: #023535;
+        margin-top: -5px;
+        margin-left: 3px;
+        font-family: 'Kanit' sans-serif;
+    
+    }
+    
+    
+    .areab{
+        width: 100%;
+        height: min-content;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+       
+        
+    }
+    .areab input{
+        color: lightseagreen;
+        font-size: 60px;
+        width: 80%;
+        font-weight: 500;
+        text-transform: capitalize;
+        border-color: #fff;
+        text-align: center;
+        margin: 8px;
+    }
+    .areab input::placeholder{
+        font-size: 50px;
+        font-weight: 500;
+        color: #008F8C;
+        text-transform: capitalize;
+    }
+    .areab button{
+        cursor: pointer;
+        width: 50px;
+        height: 50px;
+        color: #023535;
+        background-color: #888686;
+        border-radius: 50px;
+        border-color: cornsilk;
+        outline: none;
+        font-size: 27px;
+        transition: .4s ease;
+    }
+    .areab button:hover{
+        color: #fff;
+        background: #023535;
+    }
+    .areab i{
+        position: absolute;
+        font-size: 27px;
+         color: #023535;
+    }
+    .climacaja{
+        text-align: center;
+    }
+    .climacaja button{
+        cursor: pointer;
+        width: 50px;
+        height: 50px;
+        color: #023535;
+        background-color:#888686;
+        border-radius: 50px;
+        border-color: #fff;
+        outline: none;
+        font-size: 27px;
+        transition: .4s ease;
+    }
+    .climacaja button:hover{
+        color:rgb(0, 0, 0);
+        background-color: red;
+    }
+    
+    .climacaja img{
+        width: 120px;
+        margin-top: 30px;
+    }
+    .climacaja .temperatura{
+        position: relative;
+        font-size: 4rem;
+        font-weight: 800;
+        color: #023535;
+        margin-top: 30px;
+        margin-left: -16px;
+    }
+    .climacaja .temperature span{
+        position: absolute;
+        font-size: 1.5rem;
+        margin-left: 4px;
+    }
+    .climacaja .detalles{
+        font-size: 22px;
+        font-weight: 500;
+        color: #023535;
+        text-transform: capitalize;
+    }
+    .climacaja .cbuscada{
+        font-size: 22px;
+        font-weight: 500;
+        color: #023535;
+        text-transform: capitalize;
+    }
+    
+    .cdetalles{
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        margin-top: 30px;
+    }
+    .cdetalles .humedad, .cdetalles .viento{
+        font-size: 22px;
+        color: #023535;
+        width: 50%;
+        height: 100px;
+        align-items: center;
+        display: flex;
+    }
+    .cdetalles .humedad{
+        padding-left: 20px;
+        justify-content: flex-start;
+    
+    }
+    .cdetalles .viento{
+        padding-left: 20px;
+        justify-content: flex-end;
+        
+    }
+    .cdetalles i{
+        color:#008F8C;
+        margin-right: 10px;
+        margin-top: 6px;
+    }
+    .cdetalles span{
+        color:#023535;
+        font-size: 22px;
+        font-weight: 500;
+    }
+    .cdetalles p{
+        color:#023535;
+        margin-top: 7px;
+        font-size: 20px;
+        font-weight: 500;
+    }
+    
+    .error{
+        text-align: center;
+        margin-top: 50px;
+        justify-content: flex;
+        transition: .6 ease-out;
+        width: 100%;
+        scale: 0;
+        opacity: 0;
+        display: none;
+    }
+    .error img{
+        width: 30%;
+    }
+    .error p{
+        color: #008F8C;
+        font-family: 'Kanit' sans-serif;
+        font-size: 22px;
+        font-weight: 500;
+        margin-top: 12px;
+    
+    }
+    .error button{
+        cursor: pointer;
+        width: 80px;
+        height: 50px;
+        color: #023535;
+        background-color: #888686;
+        border-radius: 50px;
+        border-color: #fff;
+        outline: none;
+        font-size: 27px;
+        transition: .4s ease;
+    }
+    .error button:hover{
+        color:rgb(0, 0, 0);
+        background-color: red;
+    }
+    
+    
+    .climacaja, .cdetalles{
+        opacity: 0;
+        scale: 0;
+    }
+    
+    .t2{
+        position: fixed;
+        width: 444px;
+        height: 105px;
+        padding: 68px 32px;
+        transition: .6s ease-out;
+        font-size: 30px;
+        color: #fff;
+        margin-top: -508px;
+        margin-left: 577px;
+        scale: 0;
+        opacity: 0;
+    }
+    .t2 img{
+        width: 129px;
+        position: fixed;
+        margin-top: -105px;
+        margin-left: 382px;
+        
+    }
+    .fadeIn{
+        animation: 0.5s fadeIn forwards;
+        animation-delay: 0.5s;
+    }
+    @keyframes fadeIn{
+        to{
+            scale:1;
+            opacity: 1; 
+        }
+    }
+  }
 /*CARLOS EDUARDO HERNANDEZ MONTES*/
